# lsp-openplanet

./: Cargo.toml  todo-cover-cases-next.txt
.goal-loops/: active-goal.md  corpus-histogram.txt  type-diag-histogram.txt  undefined-idents.txt  undefined-members.txt  unknown-types.txt
docs/superpowers/plans/: 2026-04-10-openplanet-lsp.md
specs/archive/: draft-v0.1.md  draft-v0.2.md  draft-v0.3.md  draft-v0.4.md  draft-v0.5.md  draft-v0.6.md  draft-v1.0.md  draft-v1.1.md
specs/archive/spec-drafting/: archive-index.md  decision-log.md  interview-log.md  provenance-log.md  review-log.md  section-queue.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/parser/: ast.rs  error.rs  mod.rs  parser.rs
src/preprocessor/: eval.rs  filter.rs  mod.rs
src/server/: call_hierarchy.rs  code_actions.rs  completion.rs  diagnostics.rs  folding.rs  formatter.rs  highlights.rs  hover.rs  inlay_hints.rs  mod.rs  navigation.rs  scope_query.rs  semantic_tokens.rs  signature.rs  symbols.rs
src/symbols/: mod.rs  resolve.rs  scope.rs  table.rs
src/typecheck/: builtins.rs  checker.rs  global_scope.rs  mod.rs  repr.rs  resolver.rs  workspace.rs
src/typedb/: core_format.rs  index.rs  mod.rs  nadeo_format.rs
src/workspace/: deps.rs  manifest.rs  mod.rs  project.rs
tests/: cli_check_tests.rs  integration_tests.rs
tests/fixtures/tm-counter/: info.toml
tests/fixtures/tm-counter/src/: Main.as  nvg.as  (+1 more)
tests/fixtures/tm-dips-plus-plus/: info.toml
tests/fixtures/tm-editor-plus-plus/: info.toml
tests/fixtures/typedb/: OpenplanetNext.json
(+165 files in other folders)
