[package]
name = "openplanet-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for OpenPlanet AngelScript"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = "2"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
